# dish_recipes

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: .github-ci.yaml
alembic/: env.py
alembic/versions/: 2024_07_18_0348-d4ccc66dd7f3_create_access_token.py  2024_07_25_1507-441a0543d135_add_dish_recipe.py  2024_08_05_2258-ea1329d4e2bb_create_tables.py
db/: postmaster.pid
db/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
db/base/5/: 1247  1249  1259  16384  16387  16388  16389  16390  16391  16393  16394  16395  16396  16398  16399  16400  16402  16403  16406  16409  16410  16413  16414  16415  16417  16419  16421  16423  16424  16427  16436  16438  16440  16442  2224  2579  2604  2606  2608  2610  (+23 more)
db/global/: 1260  pg_control  pg_internal.init
db/pg_stat/: pgstat.stat
db/pg_xact/: 0000
fastapi-application/: .env  .env.template  main.py
fastapi-application/alembic/versions/: 2024_07_18_0253-a248d709c45e_create_user.py  2024_07_26_1028-03abc0fef553_add_dish_unic_key.py  (+1 more)
fastapi-application/core/: config.py
fastapi_application/: docker-entrypoint.sh  main.py
fastapi_application/actions/: create_superuser.py
fastapi_application/alembic/: env.py
fastapi_application/api/: __init__.py
fastapi_application/core/: __init__.py  config.py
fastapi_application/tests/: conftest.py  test_users.py
src/actions/: create_superuser.py
src/api/: __init__.py
src/core/: config.py
tests/: conftest.py  settings_test.py  test_users.py
(+62 files in other folders)
